# bdv-playground-deconvolution

./: .gitignore  Deconvolve.groovy  LICENSE  Shared_Folder.lnk  pyproject.toml  readme.md  smoke_test.py
.github/workflows/: release.yml
bdvpg_deconvolution/: cli.py  gpu.py  pipeline.py  smoke_test.py
datasets/: baukje.md  paula.md
deconvolve/: __init__.py  cli.py  pipeline.py
notebooks/: Deconvolve.ipynb
