[project]
name = "bdv-playground-deconvolution"
# Versioning: the first three components track the bigdataviewer-biop-tools
# Java release pinned in pipeline.py (DEFAULT_ENDPOINTS); the fourth is the
# wrapper revision, bumped for Python-side changes against the same Java release.
version = "0.21.0.1"
description = "Tiled, lazy, multi-GPU Richardson-Lucy deconvolution for large 5D microscopy images"
readme = "readme.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nicolas Chiaruttini", email = "nicolas.chiaruttini@unige.ch" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    # scyjava >=1.12 / jgo >=3.1 provide automatic JDK + Maven provisioning via
    # cjdk. Older versions require a system Java and Maven, which would break
    # the "no conda, no manual Java" install story.
    "pyimagej>=1.8.0",
    "scyjava>=1.12.0",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.0",
]

[project.urls]
Homepage = "https://github.com/unige-biochem/bdv-playground-deconvolution"
Repository = "https://github.com/unige-biochem/bdv-playground-deconvolution"
Issues = "https://github.com/unige-biochem/bdv-playground-deconvolution/issues"

[project.scripts]
bdvpg-deconvolve = "bdvpg_deconvolution.cli:main"
bdvpg-smoke-test = "bdvpg_deconvolution.smoke_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bdvpg_deconvolution"]
